@@ -4320,5 +4320,6 @@ menu.min.share.ratio=Minimum Share Ratio (%1)...
 min.sr.window.message=Enter minimum share ratio [0:disabled]
 min.sr.window.title=Minimum Share Ratio
 TableColumn.header.min_sr={min.sr.window.title}
+sidebar.show.options=Show the Options View as a sidebar entry rather than a separate window
 
 #PLEASE LEAVE ME AT VERY BOTTOM!
